[project]
name = "jvol"
version = "0.1.0"
description = "JPEG compression for 3D medical images."
requires-python = ">=3.10"
dependencies = [
    "einops",
    "humanize",
    "itk",
    "loguru",
    "scipy",
    "transforms3d",
    "typer",
]

[dependency-groups]
dev = ["pre-commit-uv", "tox-uv"]
docs = [
    "ipywidgets",
    "matplotlib",
    "mkdocs-gen-files",
    "mkdocs-jupyter",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-typer",
    "mkdocstrings[python]",
    "torchio",
]

[project.scripts]
jvol = "jvol.cli.convert:app"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
